--- a/style.css
+++ b/style.css
@@ -1,35 +1,280 @@
 body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
-    background-color: #f0f0f0;
-}
+    background-color: #fcfafa;
+  }
+  
+  .candle-count-display {
+    text-align: center;
+    margin-top: 150px;
+    margin-bottom: 20px;
+    font-family: 'Arial', sans-serif;
+    font-size: 20px;
+    color: #6A4B18;
+    background-color: #F0E4D0;
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    width: fit-content;
+    margin-left: auto;
+    margin-right: auto;
+    border: 2px solid #553C13;
+  }
+  
+  .candle-count-display span {
+    font-weight: bold;
+    color: #AD030F;
+  }
 
-.candle {
-    position: relative;
-    width: 50px;
-    height: 150px;
-    background-color: #fff;
-    border-radius: 25px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
+  .happy-birthday-frame {
+    text-align: center;
+    margin-top: 150px;
+    margin-bottom: 20px;
+    font-family: 'Arial', sans-serif;
+    font-size: 20px;
+    color: #6A4B18;
+    background-color: #F0E4D0;
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    width: fit-content;
+    margin-left: auto;
+    margin-right: auto;
+    border: 2px solid #553C13;
+  }
 
-.flame {
+  .happy-birthday-frame span {
+    font-weight: bold;
+    color: #AD030F;
+  }
+  
+  .cake {
     position: absolute;
-    top: -30px;
+    width: 250px;
+    height: 200px;
+    top: 50%;
     left: 50%;
-    width: 20px;
-    height: 30px;
-    background-color: orange;
+    margin-top: -70px;
+    margin-left: -125px;
+  }
+  
+  .plate {
+    width: 270px;
+    height: 110px;
+    position: absolute;
+    bottom: -10px;
+    left: -10px;
+    background-color: #ccc;
     border-radius: 50%;
-    transform: translateX(-50%);
-    box-shadow: 0 0 10px rgba(255, 165, 0, 0.5);
-    animation: flicker 0.1s infinite alternate;
+    box-shadow: 0 2px 0 #b3b3b3, 0 4px 0 #b3b3b3, 0 5px 40px rgba(0, 0, 0, 0.5);
+  }
+  
+  .cake > * {
+    position: absolute;
+  }
+  
+  .layer {
+    position: absolute;
+    display: block;
+    width: 250px;
+    height: 100px;
+    border-radius: 50%;
+    background-color: #553c13;
+    box-shadow: 0 2px 0px #6a4b18, 0 4px 0px #33240b, 0 6px 0px #32230b, 0 8px 0px #31230b, 0 10px 0px #30220b, 0 12px 0px #2f220b, 0 14px 0px #2f210a, 0 16px 0px #2e200a, 0 18px 0px #2d200a, 0 20px 0px #2c1f0a, 0 22px 0px #2b1f0a, 0 24px 0px #2a1e09, 0 26px 0px #2a1d09, 0 28px 0px #291d09, 0 30px 0px #281c09;
+  }
+  
+  .layer-top {
+    top: 0px;
+  }
+  
+  .layer-middle {
+    top: 33px;
+  }
+  
+  .layer-bottom {
+    top: 66px;
+  }
+  
+  .icing {
+    top: 2px;
+    left: 5px;
+    background-color: #f0e4d0;
+    width: 240px;
+    height: 90px;
+    border-radius: 50%;
+  }
+  .icing:before {
+    content: "";
+    position: absolute;
+    top: 4px;
+    right: 5px;
+    bottom: 6px;
+    left: 5px;
+    background-color: #f4ebdc;
+    box-shadow: 0 0 4px #f6efe3, 0 0 4px #f6efe3, 0 0 4px #f6efe3;
+    border-radius: 50%;
+    z-index: 1;
+  }
+  
+  .drip {
+   display: block;
+    width: 50px;
+    height: 60px;
+    border-bottom-left-radius: 25px;
+    border-bottom-right-radius: 25px;
+    background-color: #f0e4d0; 
+  }
+  
+  .drip1 {
+    top: 53px;
+    left: 5px;
+    transform: skewY(15deg);
+    height: 48px;
+    width: 40px;
+  }
+  
+  .drip2 {
+    top: 69px;
+    left: 181px;
+    transform: skewY(-15deg);
+  }
+  
+  .drip3 {
+    top: 54px;
+    left: 90px;
+    width: 80px;
+    border-bottom-left-radius: 40px;
+    border-bottom-right-radius: 40px;
+  }
+  
+  .candle {
+    background-color: #7B020B;
+    width: 12px;
+    height: 35px;
+    border-radius: 6px/3px;
+    top: -20px;
+    left: 50%;
+    margin-left: -8px;
+    z-index: 10;
+  }
+  .candle:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 12px;
+    height: 6px;
+    border-radius: 50%;
+    background-color: #ad030f;
+  }
+  
+  .candle.out .flame {
+    display: none;
+  }
+  
+  .flame {
+    position: absolute;
+    background-color: orange;
+    width: 10px;
+    height: 25px;
+    border-radius: 8px 8px 8px 8px/20px 20px 8px 8px;
+    top: -34px;
+    left: 50%;
+    margin-left: -7.5px;
+    z-index: 10;
+    box-shadow: 0 0 10px rgba(255, 165, 0, 0.5), 0 0 20px rgba(255, 165, 0, 0.5), 0 0 60px rgba(255, 165, 0, 0.5), 0 0 80px rgba(255, 165, 0, 0.5);
+    transform-origin: 50% 90%;
+    animation: flicker 1s ease-in-out alternate infinite;
+  }
+
+  #hearts-container {
+    position: fixed; 
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    pointer-events: none; 
 }
 
-@keyframes flicker {
-    0% { transform: translateX(-50%) scaleY(1); }
-    100% { transform: translateX(-50%) scaleY(1.1); }
+.heart {
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    background-color: rgb(203, 24, 57); 
+    background: url('https://static.vecteezy.com/system/resources/previews/010/329/885/original/doodle-love-heart-free-png.png') no-repeat center center;
+    background-size: contain;
+    opacity: 0.7;
+    animation: fall linear;
+}
+
+  
+  @keyframes flicker {
+    0% {
+      transform: skewX(5deg);
+      box-shadow: 0 0 10px rgba(255, 165, 0, 0.2), 0 0 20px rgba(255, 165, 0, 0.2), 0 0 60px rgba(255, 165, 0, 0.2), 0 0 80px rgba(255, 165, 0, 0.2);
+    }
+    25% {
+      transform: skewX(-5deg);
+      box-shadow: 0 0 10px rgba(255, 165, 0, 0.5), 0 0 20px rgba(255, 165, 0, 0.5), 0 0 60px rgba(255, 165, 0, 0.5), 0 0 80px rgba(255, 165, 0, 0.5);
+    }
+    50% {
+      transform: skewX(10deg);
+      box-shadow: 0 0 10px rgba(255, 165, 0, 0.3), 0 0 20px rgba(255, 165, 0, 0.3), 0 0 60px rgba(255, 165, 0, 0.3), 0 0 80px rgba(255, 165, 0, 0.3);
+    }
+    75% {
+      transform: skewX(-10deg);
+      box-shadow: 0 0 10px rgba(255, 165, 0, 0.4), 0 0 20px rgba(255, 165, 0, 0.4), 0 0 60px rgba(255, 165, 0, 0.4), 0 0 80px rgba(255, 165, 0, 0.4);
+    }
+    100% {
+      transform: skewX(5deg);
+      box-shadow: 0 0 10px rgba(255, 165, 0, 0.5), 0 0 20px rgba(255, 165, 0, 0.5), 0 0 60px rgba(255, 165, 0, 0.5), 0 0 80px rgba(255, 165, 0, 0.5);
+    }
+  }
+
+  @keyframes fall {
+    0% { top: -10%; }
+    100% { top: 110%; }
+}
+  .heart {
+    animation: fall 80s linear infinite;
+}
+
+#birthday-message {
+    position: absolute;
+    top: 20%; 
+    left: 20%;
+    transform: translate(-50%, -50%);
+}
+#birthday-message2 {
+    position: absolute;
+    top: 80%; 
+    left: 80%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+#birthday-message3 {
+    position: absolute;
+    top: 20%; 
+    left: 80%; 
+    transform: translate(-50%, -50%); 
+    font-size: 4em; 
+    color: rgb(177, 78, 119); 
+    font-weight: bold; 
+    font-family: 'Roboto', sans-serif;
+}
+
+@media screen and (max-width: 600px) {
+    #birthday-message {
+        width: 90%; /* Kích thước rộng hơn cho màn hình điện thoại */
+        top: 30%; /* Điều chỉnh vị trí nếu cần */
+    }
+}
+
+.img-container {
+    position: absolute;
+    top: calc(50% + 130px); /* Đặt ảnh ngay dưới phần tử .cake */
+    left: 50%;
+    transform: translateX(-50%);
+    width: 250px; /* Đặt cùng kích thước với .cake hoặc tùy chỉnh */
+    height: auto;
+    text-align: center; /* Căn giữa nội dung bên trong */
 }
